--- a/main.ipynb
+++ b/main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,19 +37,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def greater(a,b):\n",
-    "    pass"
+    "    if a > b:\n",
+    "        return a\n",
+    "    else:\n",
+    "        return b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.062s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_greater(greater)"
@@ -64,19 +79,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def greatest(arr):\n",
-    "    pass"
+    "    return max(arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.060s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_greatest(greatest)"
@@ -91,19 +118,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sum_all(arr):\n",
-    "    pass"
+    "    return sum(arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.059s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_sum(sum_all)"
@@ -118,19 +157,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def mult_all(arr):\n",
-    "    pass"
+    "    result = 1\n",
+    "    for x in arr:\n",
+    "         result = result * x\n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.057s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_mult(mult_all)"
@@ -145,19 +199,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def oper_all(arr, oper):\n",
-    "    pass"
+    "    if oper == \"+\":\n",
+    "        result=0\n",
+    "        for x in arr:\n",
+    "            result=result+x\n",
+    "    else:\n",
+    "        result = 1\n",
+    "        for x in arr:\n",
+    "             result = result * x\n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.049s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_operations(oper_all)"
@@ -172,19 +246,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def factorial(n):\n",
-    "    pass"
+    "import math\n",
+    " \n",
+    "def factorial(x):\n",
+    "    return math.factorial(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.062s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_factorial(factorial)"
@@ -201,19 +289,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "def unique(arr):\n",
-    "    pass"
+    "    unique_values = []\n",
+    "\n",
+    "    for i in arr:\n",
+    "        if i not in unique_values:\n",
+    "            unique_values.append(i)\n",
+    "    return unique_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.110s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_unique(unique)"
@@ -229,19 +334,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def mode_counter(arr):\n",
-    "    pass"
+    "    return mode(arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.067s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_mode(mode_counter)"
@@ -257,20 +374,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "from statistics import stdev\n",
     "def st_dev(arr):\n",
-    "    pass"
+    "    n = len(arr)\n",
+    "    mean = sum(arr) / n\n",
+    "    var = sum((i - mean)**2 for i in arr) / (n-1)\n",
+    "    sigma = var ** 0.5\n",
+    "    return sigma\n",
+    "     "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.057s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_stdev(st_dev)"
@@ -285,19 +419,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pangram(string):\n",
-    "    pass"
+    "    alphabet='abcdefghijklmnopqrstuvwxyz'\n",
+    "    for i in alphabet:\n",
+    "        if i not in string.lower():\n",
+    "            return False\n",
+    "    return True\n",
+    "    \n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "..............................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 30 tests in 0.025s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_pangram(pangram)"
@@ -318,8 +470,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sort_alpha(string):\n",
-    "    pass"
+    "string = \"word, a, dog, cat\""
    ]
   },
   {
@@ -327,6 +478,56 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "string2 = \"a, cat, dog, word\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sort_alpha(string):\n",
+    "    character=''\n",
+    "    list_words=[]\n",
+    "    count=0\n",
+    "    for i in string:\n",
+    "        if i!=',' and count!=len(string)-1:\n",
+    "            character+=i\n",
+    "        elif i==',':\n",
+    "            list_words.append(character) \n",
+    "            character=''\n",
+    "        else :\n",
+    "            list_words.append(character+i)\n",
+    "        count+=1\n",
+    "    list_words=sorted(list_words)\n",
+    "    words=''\n",
+    "    for j in list_words:\n",
+    "        if list_words.index(j)!=len(list_words)-1:\n",
+    "            words+=j+','\n",
+    "        else:\n",
+    "            words+=j\n",
+    "    return words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.086s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# This will test your function \n",
     "test_alpha(sort_alpha)"
@@ -342,12 +543,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_pass(string):\n",
-    "    pass"
+    "import re\n",
+    "def check_pass(password):\n",
+    "    \"\"\"\n",
+    "    Verify the strength of 'password'\n",
+    "    A password is considered strong if:\n",
+    "        8 characters length or more\n",
+    "        1 digit or more\n",
+    "        1 symbol or more\n",
+    "        1 uppercase letter or more\n",
+    "        1 lowercase letter or more\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # calculating the length\n",
+    "    length_error = len(password) < 8\n",
+    "\n",
+    "    # searching for digits\n",
+    "    digit_error = re.search(r\"\\d\", password) is None\n",
+    "\n",
+    "    # searching for uppercase\n",
+    "    uppercase_error = re.search(r\"[A-Z]\", password) is None\n",
+    "\n",
+    "    # searching for lowercase\n",
+    "    lowercase_error = re.search(r\"[a-z]\", password) is None\n",
+    "\n",
+    "    # searching for symbols\n",
+    "    symbol_error = re.search(r\"[ @!#$%&()*[\\]^{}\"+r'\"]', password) is None\n",
+    "\n",
+    "    # overall result\n",
+    "    password_ok = not ( length_error or digit_error or uppercase_error or lowercase_error or symbol_error )\n",
+    "\n",
+    "    if password_ok:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....................................................................................................\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 100 tests in 0.072s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This will test your function \n",
+    "test_pass(check_pass)"
    ]
   },
   {
@@ -355,15 +610,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# This will test your function \n",
-    "test_pass(check_pass)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -377,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
